--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </ul>
                     </div>
                     <div class="col-md-5 skillsoft">
-                        <h2>Compétences transversales</h2>
+                        <h2>Compétences transverses</h2>
                         <ul>
                             <li>Ecoute active</li>
                             <li>Travail en équipe</li>
@@ -67,7 +67,7 @@
 
             <div class="col-md-3 colname">
                 <h1>Magali Milbergue</h1>
-                <h2>Développeuse web fullstack junior.</h2>
+                <h2>Développeuse web fullstack junior bilingue.</h2>
                 En recherche d'un stage <span>du 10 septembre au 17 octobre 2019</span>.
             </div>
 
@@ -75,13 +75,11 @@
 
                 <h2>Formation</h2>
 
-                <span> 2019-Octobre 2019 : <strong> Développeur web et web mobile.</strong> (Webforce 3 Les Mureaux,
-                    GEN) <br>
+                <span> 2019-Octobre 2019 : <strong> Développeur/Développeuse web et web mobile.</strong> (Webforce 3, GEN) <br>
                     Formation intensive validée par deux CNCP (Techniques d'intégration web et techniques de
                     développement
                     web) et un RNCP (Développeur web et web mobile, niveau III, équivalent bac+2). <br><br></span>
                 2012-2014 : Formation Educatrice Spécialisée. (Buc Ressources) <br>
-                Deux années. <br><br>
                 2006 : Bac Littéraire, option Portugais LV3. <br>
                 Mention assez bien. <br>
 
